SMX4KNL-64: The list of repositories for the features shell is not persisted across restart
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx4/kernel/trunk@679691 13f79535-47bb-0310-9956-ffa450edef68